# kapelukh-backend

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  logger.py  main.py
app/api/: __init__.py  auth.py  payments.py  survey.py  telegram_users.py  telegram_webhook.py
app/bot/: __init__.py  dispatcher.py  handlers.py  middleware.py
app/crud/: __init__.py  payment.py  survey.py  telegram_user.py  websocket.py
app/models/: __init__.py  payment.py  survey.py  telegram_user.py  websocket.py
app/schemas/: __init__.py  auth.py  payment.py  survey.py  telegram_user.py  websocket.py
app/services/: __init__.py  base.py  examples.py  registry.py  rest_service.py  survey_ai.py  ws_service.py
app/websocket/: __init__.py  event_bus.py  events.py  integration.py  manager.py  plugin_system.py  routes.py  subscription.py
app/websocket/plugins/: __init__.py  payment_plugin.py  survey_plugin.py  telegram_user_plugin.py
docs/: API_DOCUMENTATION.md  EXTERNAL_SERVICES.md  HOW_TO_ADD_MODEL.md  WEBSOCKET_DOCUMENTATION.md  project.md
scripts/: init_db.py
tests/: conftest.py  test_auth.py  test_main.py  test_telegram_users.py
