[project]
name = "kapelukh-backend"
version = "0.1.0"
requires-python = ">=3.13"
 dependencies = [
      "aiogram>=3.0.0",
      "aiosqlite>=0.22.1",
      "asyncpg>=0.30.0",
      "fastapi[all]>=0.128.0",
      "httpx>=0.28.1",
      "passlib[bcrypt]>=1.7.4",
      "python-jose[cryptography]>=3.3.0",
      "python-multipart>=0.0.20",
      "pydantic>=2.12.5",
      "pydantic-settings>=2.12.0",
      "pytest>=9.0.2",
      "sqlalchemy>=2.0.45",
      "sqlmodel>=0.0.31",
      "tenacity>=8.2.0",
      "uvicorn>=0.40.0",
      "pytest-asyncio>=1.3.0",
      "websockets>=14.0.0",
      "langchain>=1.2.6",
      "pydantic-ai>=0.0.0",
      "google-generativeai>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[tool.poetry]
name = "kapelukh-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
